force-app/main/default/objects/Market_Impact_Event__e/Market_Impact_Event__e.object-meta.xml
<CustomObject>
    <label>Market Impact Event</label>
    <pluralLabel>Market Impact Events</pluralLabel>
</CustomObject>