force-app/main/default/objects/Market_Impact_Event__e/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event Id</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>