force-app/main/default/objects/Market_Impact_Event__e/fields/Pct_Change__c.field-meta.xml
<CustomField>
    <fullName>Pct_Change__c</fullName>
    <label>Pct Change</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>