force-app/main/default/objects/Market_Impact_Event__e/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Text</type>
    <length>40</length>
</CustomField>