force-app/main/default/objects/Market_Impact_Event__e/fields/Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time__c</fullName>
    <label>Trigger Time</label>
    <type>DateTime</type>
</CustomField>